turbopack/crates/turbopack-tests/tests/snapshot/mdx/error/output/crates_turbopack-tests_tests_snapshot_mdx_error_input_index_a3c4fd.js
(globalThis.TURBOPACK = globalThis.TURBOPACK || []).push(["output/crates_turbopack-tests_tests_snapshot_mdx_error_input_index_a3c4fd.js", {

"[project]/crates/turbopack-tests/tests/snapshot/mdx/error/input/index.js [test] (ecmascript)": (function({ r: __turbopack_require__, f: __turbopack_module_context__, i: __turbopack_import__, s: __turbopack_esm__, v: __turbopack_export_value__, n: __turbopack_export_namespace__, c: __turbopack_cache__, M: __turbopack_modules__, l: __turbopack_load__, j: __turbopack_dynamic__, P: __turbopack_resolve_absolute_path__, U: __turbopack_relative_url__, R: __turbopack_resolve_module_id_path__, g: global, __dirname, m: module, e: exports, t: require }) { !function() {

const e = new Error("Could not parse module '[project]/crates/turbopack-tests/tests/snapshot/mdx/error/input/index.js'");
e.code = 'MODULE_UNPARSEABLE';
throw e;
}.call(this) }),
}]);